[gd_scene load_steps=38 format=3 uid="uid://c80v17p8mc8fu"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_ig6xq"]
[ext_resource type="AnimationLibrary" uid="uid://bwlyui44rif6u" path="res://assets/anims/humanoid.glb" id="2_ae3ua"]
[ext_resource type="PackedScene" uid="uid://dxnxb8q120gfh" path="res://assets/models/roth/roth.glb" id="3_k70r2"]
[ext_resource type="PackedScene" uid="uid://bo23fp6nrjlt6" path="res://entities/tray/tray.tscn" id="3_ur3hw"]
[ext_resource type="AudioStream" uid="uid://cjkqk1730xr6c" path="res://assets/audio/footstep.wav" id="4_5cl28"]
[ext_resource type="AudioStream" uid="uid://bl7yifpcbbjsg" path="res://assets/audio/hurt.wav" id="5_f086d"]
[ext_resource type="AudioStream" uid="uid://d1fi0qcmjagn2" path="res://assets/audio/disco_run.wav" id="7_qem3f"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1r8qv"]
radius = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xp5uu"]
radius = 0.224207
height = 1.88127

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7k33j"]
animation = &"humanoid/hold_tray"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_s0akl"]
filter_enabled = true
filters = ["%GeneralSkeleton:LeftHand", "%GeneralSkeleton:LeftIndexDistal", "%GeneralSkeleton:LeftIndexIntermediate", "%GeneralSkeleton:LeftIndexProximal", "%GeneralSkeleton:LeftLittleDistal", "%GeneralSkeleton:LeftLittleIntermediate", "%GeneralSkeleton:LeftLittleProximal", "%GeneralSkeleton:LeftLowerArm", "%GeneralSkeleton:LeftMiddleDistal", "%GeneralSkeleton:LeftMiddleIntermediate", "%GeneralSkeleton:LeftMiddleProximal", "%GeneralSkeleton:LeftRingDistal", "%GeneralSkeleton:LeftRingIntermediate", "%GeneralSkeleton:LeftRingProximal", "%GeneralSkeleton:LeftShoulder", "%GeneralSkeleton:LeftThumbDistal", "%GeneralSkeleton:LeftThumbMetacarpal", "%GeneralSkeleton:LeftThumbProximal", "%GeneralSkeleton:LeftUpperArm", "%GeneralSkeleton:mixamorig_LeftHandThumb4"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1i1cu"]
animation = &"humanoid/defeat"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uhuly"]
animation = &"humanoid/idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hywir"]
animation = &"humanoid/jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2uc68"]
animation = &"humanoid/run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2tgyn"]
animation = &"humanoid/trip"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ni18l"]
animation = &"humanoid/trip"
use_custom_timeline = true
timeline_length = 1.0
stretch_time_scale = true
start_offset = 0.0
loop_mode = 0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c1nr1"]
animation = &"humanoid/trip_fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mka6l"]
animation = &"humanoid/trip_slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_807be"]
animation = &"humanoid/trip_slide_end"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cdpbt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q8x2q"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g52cf"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8wn2t"]
xfade_time = 0.5
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h1skg"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xe8ie"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"trip"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_njli0"]
xfade_time = 0.25
advance_mode = 2
advance_condition = &"trip"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2a6fq"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aqjex"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ooro2"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8mpt8"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"trip_fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ja1ov"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"trip_fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ajq42"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5pxr2"]
xfade_time = 0.25
advance_mode = 2
advance_condition = &"defeat"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_58kca"]
xfade_time = 0.3
advance_mode = 2
advance_condition = &"defeat"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_x4e5y"]
states/End/position = Vector2(1042, 100)
states/defeat/node = SubResource("AnimationNodeAnimation_1i1cu")
states/defeat/position = Vector2(577, -21)
states/idle/node = SubResource("AnimationNodeAnimation_uhuly")
states/idle/position = Vector2(356, 100)
states/jump/node = SubResource("AnimationNodeAnimation_hywir")
states/jump/position = Vector2(644, 100)
states/run/node = SubResource("AnimationNodeAnimation_2uc68")
states/run/position = Vector2(511, 100)
states/trip/node = SubResource("AnimationNodeAnimation_ni18l")
states/trip/position = Vector2(511, 219)
"states/trip 2/node" = SubResource("AnimationNodeAnimation_2tgyn")
"states/trip 2/position" = Vector2(644, 219)
states/trip_fall/node = SubResource("AnimationNodeAnimation_c1nr1")
states/trip_fall/position = Vector2(789, 219)
states/trip_slide/node = SubResource("AnimationNodeAnimation_mka6l")
states/trip_slide/position = Vector2(940, 219)
states/trip_slide_end/node = SubResource("AnimationNodeAnimation_807be")
states/trip_slide_end/position = Vector2(1090, 219)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_cdpbt"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_q8x2q"), "run", "jump", SubResource("AnimationNodeStateMachineTransition_g52cf"), "jump", "run", SubResource("AnimationNodeStateMachineTransition_8wn2t"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_h1skg"), "run", "trip", SubResource("AnimationNodeStateMachineTransition_xe8ie"), "jump", "trip", SubResource("AnimationNodeStateMachineTransition_njli0"), "trip", "run", SubResource("AnimationNodeStateMachineTransition_2a6fq"), "trip_fall", "trip_slide", SubResource("AnimationNodeStateMachineTransition_aqjex"), "trip_slide", "trip_slide_end", SubResource("AnimationNodeStateMachineTransition_ooro2"), "jump", "trip 2", SubResource("AnimationNodeStateMachineTransition_8mpt8"), "run", "trip 2", SubResource("AnimationNodeStateMachineTransition_ja1ov"), "trip 2", "trip_fall", SubResource("AnimationNodeStateMachineTransition_ajq42"), "run", "defeat", SubResource("AnimationNodeStateMachineTransition_5pxr2"), "jump", "defeat", SubResource("AnimationNodeStateMachineTransition_58kca")]
graph_offset = Vector2(24, -115)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_n8rkt"]
graph_offset = Vector2(-64.4381, -41.325)
nodes/hold_tray/node = SubResource("AnimationNodeAnimation_7k33j")
nodes/hold_tray/position = Vector2(-220, 320)
nodes/hold_tray_blend/node = SubResource("AnimationNodeBlend2_s0akl")
nodes/hold_tray_blend/position = Vector2(360, 80)
nodes/output/position = Vector2(580, 140)
nodes/state_machine/node = SubResource("AnimationNodeStateMachine_x4e5y")
nodes/state_machine/position = Vector2(80, 60)
node_connections = [&"hold_tray_blend", 0, &"state_machine", &"hold_tray_blend", 1, &"hold_tray", &"output", 0, &"hold_tray_blend"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_ig6xq")

[node name="Visual" type="Node3D" parent="."]

[node name="Roth" parent="Visual" instance=ExtResource("3_k70r2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="GeneralSkeleton" parent="Visual/Roth/roth" index="0"]
bones/0/position = Vector3(6.07006e-08, 0.989827, 0.0147544)
bones/0/rotation = Quaternion(1.63447e-07, 2.23274e-08, -9.84778e-07, 1)
bones/1/rotation = Quaternion(2.18861e-08, -2.23267e-08, 7.34268e-07, 1)
bones/2/rotation = Quaternion(-7.45058e-09, 4.28685e-14, -6.76459e-13, 1)
bones/3/rotation = Quaternion(-7.45058e-09, -2.20657e-15, -5.66214e-15, 1)
bones/4/rotation = Quaternion(3.72529e-09, -3.84137e-14, -2.18603e-13, 1)
bones/8/rotation = Quaternion(-9.53674e-07, 1, 9.83477e-07, 0)
bones/9/rotation = Quaternion(0, -0.707107, 6.32203e-08, 0.707107)
bones/10/rotation = Quaternion(5.45042e-07, 0.707107, 5.45042e-07, 0.707107)
bones/11/rotation = Quaternion(-0.210905, 0.676919, 0.210144, 0.673156)
bones/12/rotation = Quaternion(-0.00757465, -0.00376607, -0.000403225, 0.999964)
bones/13/rotation = Quaternion(-0.00560212, -0.00278682, -0.000284106, 0.99998)
bones/14/scale = Vector3(1.00058, 1.00049, 1.00015)
bones/15/rotation = Quaternion(-8.64267e-07, 1.49012e-07, 4.45843e-05, 1)
bones/16/rotation = Quaternion(-1.19209e-07, -1.19209e-07, -0.000104785, 1)
bones/17/rotation = Quaternion(2.98023e-08, 2.98023e-08, 6.634e-05, 1)
bones/19/rotation = Quaternion(8.9407e-08, 2.98023e-08, 3.14116e-05, 1)
bones/20/rotation = Quaternion(-8.9407e-08, -2.98023e-08, -2.0951e-05, 1)
bones/21/rotation = Quaternion(1.49012e-08, 8.9407e-08, -2.09659e-05, 1)
bones/23/rotation = Quaternion(-8.64267e-07, 2.98023e-08, -6.09457e-06, 1)
bones/24/rotation = Quaternion(2.98023e-08, -2.98023e-08, 2.98023e-08, 1)
bones/25/rotation = Quaternion(1.49012e-08, 8.9407e-08, -1.04308e-07, 1)
bones/27/rotation = Quaternion(5.126e-06, 1.19209e-07, -0.00204468, 0.999998)
bones/28/rotation = Quaternion(-7.7486e-07, 0, 0.000210434, 1)
bones/29/rotation = Quaternion(1.49012e-07, 1.49012e-08, 6.69509e-05, 1)
bones/32/rotation = Quaternion(-2.23517e-07, 1, -5.96046e-08, -4.76837e-07)
bones/33/rotation = Quaternion(1.05367e-08, 0.707107, -3.16101e-08, 0.707107)
bones/34/rotation = Quaternion(-2.17655e-07, -0.707105, 3.44096e-07, 0.707109)
bones/35/rotation = Quaternion(-0.210382, -0.677397, -0.209507, 0.673037)
bones/36/rotation = Quaternion(-0.00857148, 0.00425975, 0.00048098, 0.999954)
bones/37/rotation = Quaternion(-0.00636502, 0.00315918, 0.00039947, 0.999975)
bones/38/scale = Vector3(1.00058, 1.00049, 1.00015)
bones/39/rotation = Quaternion(8.9407e-07, 1.19209e-07, 0.000163928, 1)
bones/40/rotation = Quaternion(-8.9407e-08, -2.98023e-08, -0.000255644, 1)
bones/41/rotation = Quaternion(-4.47035e-08, 0, 8.80808e-05, 1)
bones/43/rotation = Quaternion(9.83477e-07, 2.98023e-08, 0.000501722, 1)
bones/44/rotation = Quaternion(-8.9407e-08, 2.98023e-08, -0.000850052, 1)
bones/45/rotation = Quaternion(-2.98023e-08, -2.98023e-08, 0.000322014, 1)
bones/47/rotation = Quaternion(2.98023e-08, -2.98023e-08, -0.000156373, 1)
bones/48/rotation = Quaternion(-1.49012e-08, 2.98023e-08, 0.000221565, 1)
bones/49/rotation = Quaternion(2.98023e-08, -2.98023e-08, 0.000112683, 1)
bones/51/rotation = Quaternion(-4.52995e-06, -1.49012e-08, -0.000520304, 1)
bones/52/rotation = Quaternion(2.38419e-07, 1.49012e-08, -0.00084649, 1)
bones/53/rotation = Quaternion(4.47035e-08, 5.96047e-08, 0.000496641, 1)
bones/55/rotation = Quaternion(-2.27273e-08, 0.000650287, 1, -7.08998e-07)
bones/56/rotation = Quaternion(-9.88598e-10, 0.999999, -0.00129878, 1.41578e-08)
bones/57/rotation = Quaternion(-1.10564e-08, 0.706648, -0.707565, 1.30727e-08)
bones/58/rotation = Quaternion(1.17007e-10, 1, -2.98023e-08, 9.26961e-10)
bones/60/rotation = Quaternion(-2.25962e-08, 0.000672017, 1, -6.98558e-07)
bones/61/rotation = Quaternion(3.07411e-10, 0.999999, -0.00134146, -5.58364e-10)
bones/62/rotation = Quaternion(-1.11062e-08, 0.706633, -0.70758, 1.28135e-08)
bones/63/rotation = Quaternion(6.52957e-11, 1, -2.98023e-08, 3.70793e-12)

[node name="BoneAttachmentHips" type="BoneAttachment3D" parent="Visual/Roth/roth/GeneralSkeleton" index="6"]
transform = Transform3D(1, 1.96956e-06, 4.46545e-08, -1.96956e-06, 1, -3.26894e-07, -4.46551e-08, 3.26894e-07, 1, 6.07006e-08, 0.989827, 0.0147544)
bone_name = "Hips"
bone_idx = 0

[node name="HurtboxArea" type="Area3D" parent="Visual/Roth/roth/GeneralSkeleton/BoneAttachmentHips" groups=["player_hurtbox"]]

[node name="Hurtbox" type="CollisionShape3D" parent="Visual/Roth/roth/GeneralSkeleton/BoneAttachmentHips/HurtboxArea"]
transform = Transform3D(0.882904, -0.010978, -0.469425, 0.00933787, 0.999939, -0.00582185, 0.469461, 0.000756651, 0.882953, -0.11098, -0.553642, 0.253109)
shape = SubResource("SphereShape3D_1r8qv")

[node name="BoneAttachmentLeftHand" type="BoneAttachment3D" parent="Visual/Roth/roth/GeneralSkeleton" index="7"]
transform = Transform3D(-2.76331e-07, 1, 1.55534e-06, 3.40865e-07, 1.55534e-06, -1, -1, -2.76331e-07, -3.40866e-07, 0.654485, 1.39418, -0.018955)
bone_name = "LeftHand"
bone_idx = 10

[node name="Tray" parent="Visual/Roth/roth/GeneralSkeleton/BoneAttachmentLeftHand" instance=ExtResource("3_ur3hw")]
transform = Transform3D(-0.995951, 0.086775, 0.0235469, 0.0345092, 0.127083, 0.991292, 0.0830269, 0.988088, -0.129562, -0.00704628, 0.0496727, 0.0674088)

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.944695, 0)
shape = SubResource("CapsuleShape3D_xp5uu")

[node name="CameraMountLocation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.555384, 1.992, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Visual/Roth")
libraries = {
"humanoid": ExtResource("2_ae3ua")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
root_node = NodePath("../Visual/Roth")
tree_root = SubResource("AnimationNodeBlendTree_n8rkt")
anim_player = NodePath("../AnimationPlayer")
parameters/hold_tray_blend/blend_amount = 1.0
parameters/state_machine/conditions/defeat = false
parameters/state_machine/conditions/die = false
parameters/state_machine/conditions/idle = false
parameters/state_machine/conditions/jump = false
parameters/state_machine/conditions/run = false
parameters/state_machine/conditions/trip = false
parameters/state_machine/conditions/trip_fall = false

[node name="FootstepSfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_5cl28")

[node name="HurtSfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_f086d")

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_qem3f")
volume_db = -15.0
autoplay = true

[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"]

[editable path="Visual/Roth"]
